[package]
name = "secondlang"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A typed, compiled programming language with LLVM backend"
authors = ["Ehsan M. Kermani <ehsanmok@users.noreply.github.com>"]

[dependencies]
pest = "2.7"
pest_derive = "2.7"
# LLVM bindings - requires nightly Rust
# Update feature to match your llvm-config --version
inkwell = { version = "0.8.0", features = ["llvm21-1"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "secondlang"
path = "src/main.rs"

